Fix lint complaining about object spread

--- a/mars_rover/.eslintrc
+++ b/mars_rover/.eslintrc
@@ -1,7 +1,8 @@
 {
     "root": true,
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": 2018
     },
     "env": {
         "es6": true,
